--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     ></script>
   </head>
   <body>
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container">
             <a href="#" class="navbar-brand">Boot 5 Tutor</a> 
@@ -34,5 +35,18 @@
         </div>
     </div>
     </nav>
+
+    <!-- Showcase -->
+<section class="bg-dark text-light p-5 text-center text-sm-start">
+    <div class="d-sm-flex align-items-center justify-content-between">
+        <div>
+            <h2>Become a <span class="text-warning">Web Developer</span></h2>
+            <p class="lead my-4">On-demand Full-Stack Web Dev program. Complete coursework at the time that works for you. Learn relevant skills to launch your career as a Full-Stack Web Developer. Apply today!</p>
+            <button class="btn btn-primary btn-lg">Get Details</button>
+        </div>
+        <img class="img-fluid w-50 d-none d-sm-block" src="img/coding.svg" alt="">
+    </div>
+</section>
+
   </body>
 </html>
